# zotero-cleanup-skills

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  run_pipeline.py
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
scripts/: 01_documents_to_preprints.py  02_arxiv_journals_to_preprints.py  03_preprints_fetch_doi.py  04_preprints_to_journals.py  05_conferences.py  06_journal_metadata_fixes.py  07_strip_arxiv_from_journals.py  08_standardize_journal_titles.py  09_tag_arxiv_categories.py  10_organize_unfiled.py  11_normalize_collection_names.py  12_merge_collections.py  13_conferences_dblp.py  14_clean_extra.py  15_clean_titles.py  16_resolve_placeholder_dois.py  17_clean_creator_names.py  18_capitalize_proper_nouns.py  19_fill_missing_dois.py  20_clean_journal_preprint_urls.py
scripts/tools/: delete_all_tags.py  detect_dead_dois.py  import_bib.py  scan_import_artifacts.py  scrape_dois.py
skills/zotero-cleanup/: SKILL.md
zotcleanup/: __init__.py  cli.py  client.py  collections.py  helpers.py
