[project]
name = "zotcleanup"
version = "0.1.0"
description = "Scriptable cleanup pipeline for a personal Zotero library (arXiv/Crossref metadata normalization)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sirui Lu" }]
keywords = ["zotero", "bibliography", "arxiv", "crossref", "metadata"]
dependencies = [
    "pyzotero>=1.5",
    "arxiv>=2.1",
    "crossrefapi>=1.5",
    "requests>=2.31",
    "pandas>=2.0",
    "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://github.com/texra-ai/zotero-cleanup-skills"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["zotcleanup"]
